# DB-2023

./: .gitignore  README.md  SwanDetector.spec  classification-moscow-2023.ipynb  digital-hackaton-2023-moscow_1.ipynb  pyproject.toml  requirements.txt  swan_detector.spec
model/: model.py  utils.py
swan_detector/: __main__.py
swan_detector/constants/: __init__.py  methods_load.py  reference.py  results.py  swan_classes.py
swan_detector/forms/: main_window.py  resources.py  result_dialog.py  result_widget.py
swan_detector/model/: __init__.py  model.py  model_detect_clf.py  model_voting.py  utils.py
swan_detector/multithreading/: __init__.py  worker.py
swan_detector/palettes/: __init__.py  general.py  result_dialog.py
swan_detector/qt/: auto_compiler_script.py  main_window.ui  resources.qrc  result_dialog.ui  result_widget.ui
swan_detector/widgets/: result_item.py
swan_detector/windows/: main_window.py  result_dialog.py
